# sls-spending-import

./: .gitignore  README.md  package-lock.json  package.json  pyproject.toml  serverless.yml
src/: handle_mail_event.py  ynab.py
src/tests/: test_handle_mail_event.py
src/tests/data/: transaction_alert.txt
