[tool.poetry]
name = "tmp"
version = "0.1.0"
description = ""
authors = ["Isaac Wagner <<>>"]

[tool.poetry.dependencies]
python = "^3.9"
pynab = {url = "https://github.com/idwagner/pynab/archive/0.1.3.tar.gz#egg=pynab"}
pyparsing = "^3.0.9"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
boto3 = "^1.20.32"
botocore = "^1.23.32"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
